fixed footer display and mobile layout bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,55 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /* max-width: 1280px; */
+  margin: 0;
+  padding: 0;
   text-align: center;
+  height: 100%;
+
 }
 
 #main-logo {
-  width: 60%;
+  width: 50%;
 }
 
 #tutorial {
   margin-top: 20px;
 }
 
+.container {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  /* justify-content: space-between; */
+  background-image: linear-gradient(180deg, #e29764, #dfa986);
+}
+
+.main-section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  padding: 1.2rem;
+}
+
+footer {
+  width: 100vw;
+  text-align: center;
+  background-color: #e29764;
+  border-top: 1px solid salmon;
+}
+
+footer p {
+  margin: 10px;
+  padding: 0;
+  font-size: 0.9rem;
+}
+
 @media only screen and (min-width: 700px) {
   #main-logo {
-    width: 35%;
+    width: 55%;
   }
 }
