--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,15 @@
-html {
+html, body {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
+  height: 100%;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  background-image: linear-gradient(180deg, #e29764, #dfa986);
-}
-
-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  text-align: center;
-  background-color: #e29764;
-  border-top: 1px solid salmon;
-}
-
-footer p {
-  margin: 10px;
-  padding: 0;
-  font-size: 0.9rem;
 }
 
 @media (prefers-color-scheme: light) {
