--- a/src/styles/memGame.css
+++ b/src/styles/memGame.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(3, 1fr);
   margin-top: 12px;
   /* gap: 12px 10px; */
+  width: 80%;
 }
 
 .card {
@@ -18,6 +19,7 @@
 
 @media only screen and (min-width: 700px) {
   .item-list {
-    grid-template-columns: repeat(6,1fr)
+    grid-template-columns: repeat(6,1fr);
+    width: 100%;
   };
 }
